[package]
name = "holy_crab_best_path"
version = "0.1.5"
edition = "2021"
publish = ["kellnr"]
authors = ["Davide Pedrotti", "Alessandro Fontana", "Pietro De Angeli", "Nicolas Torriglia"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
robotics_lib = { version = "0.1.21", registry = "kellnr" }
worldgen_unwrap = { version = "0.1.2", registry = "kellnr" }
rand = "0.8.5"
strum = "0.25.0"
ggez = "0.9.3"

bessie  = { version = "0.1.11", registry = "kellnr" } # get stones and make road
bob_lib = { version = "0.1.2", registry = "kellnr" } # map with goals and tracker
OwnerSheeps_Sound_Tool  = { version = "0.1.0", registry = "kellnr" } # sound
pmp_collect_all = { version = "0.1.4", registry = "kellnr" } # collects everything in range of the robot
rust_and_furious_dynamo   = { version = "0.1.2", registry = "kellnr" } # recharges robot's energy
sense_and_find_by_rustafariani = { version = "0.1.3", registry = "kellnr" } #
spyglass  = { version = "0.1.1", registry = "kellnr" } # discovery

rayon = "1.8.1"
colored = "2.1.0"

